# caseprep

./: CasePrep_All_In_One_v1.2.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY_OVERVIEW.md  WEB_IMPLEMENTATION_PLAN.md  additional_options.md  blueprint.md  decisions_and_guidance.md  deployment_scaling.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  exports.py  matters.py  media.py  tenants.py  transcripts.py  users.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: __init__.py  base.py  matter.py  media.py  transcript.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py  export_service.py  file_service.py  storage_service.py  transcription_service.py
backend/app/tasks/: __init__.py  celery_app.py  export_tasks.py  maintenance_tasks.py  transcription_tasks.py
backend/scripts/: init_db.py  manage_db.py
docs/: DECISIONS.md  DEPLOYMENT.md  OPTIONS.md  SECURITY.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/: manifest.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/sign-in/: page.tsx
frontend/src/app/auth/sign-up/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/matters/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/transcripts/: page.tsx
frontend/src/app/transcripts/[id]/: page.tsx
frontend/src/app/transcripts/upload/: page.tsx
frontend/src/components/common/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/transcript/: DictionaryEditor.tsx  ExportDialog.tsx  SpeakerMapping.tsx  TranscriptControls.tsx  TranscriptEditor.tsx  TranscriptPlayer.tsx  TranscriptTimeline.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx
frontend/src/hooks/: use-theme.ts
frontend/src/lib/: theme.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
